changed to single-region site

--- a/html/config.json
+++ b/html/config.json
@@ -1,4 +1,5 @@
 {
+	"regionName": "norden",
 	"requireResidency": true,
 	"requireWA": true,
 	"description": "a Nordic-themed region welcome to nations of all kinds"
